# ya-obs-sdk

./: .env.test.template  .gitignore  README.md
.github/workflows/: release.yml  rust.yml
docs/superpowers/plans/: 2026-04-18-python-sdk-v0.1.md  2026-04-23-streaming-multipart-upload.md  2026-05-14-rust-sdk-and-cli.md
docs/superpowers/specs/: 2026-04-17-ya-obs-sdk-design.md  2026-04-23-streaming-multipart-upload-design.md
python/: CHANGELOG.md  pyproject.toml
python/src/ya_obs/: __init__.py  _errors.py  _http.py  _models.py  _multipart.py  _responses.py  _retry.py  _signer_v2.py  _signer_v4.py  _streaming.py  _url.py  _xml.py  client.py
python/tests/: conftest.py  test_async_client.py  test_client.py  test_http.py  test_models.py  test_multipart.py  test_retry.py  test_signer_v2.py  test_signer_v4.py  test_streaming.py  test_url.py  test_xml.py
python/tests/vectors/: test_auth_vectors.py  test_error_vectors.py  test_xml_vectors.py
rust/: .gitignore  CHANGELOG.md  Cargo.toml
rust/ya-obs/: Cargo.toml
rust/ya-obs-cli/: Cargo.toml
rust/ya-obs-cli/completions/: _ya-obs.zsh  ya-obs.bash
rust/ya-obs-cli/src/: args.rs  config.rs  errors.rs  lib.rs  main.rs  obs_uri.rs  progress.rs
rust/ya-obs-cli/src/commands/: cat.rs  completion.rs  cp.rs  init.rs  ls.rs  mod.rs  presign.rs  rm.rs  stat.rs
rust/ya-obs-cli/tests/: cli_smoke.rs  config_test.rs  init_test.rs
rust/ya-obs/src/: client.rs  config.rs  credentials.rs  error.rs  http.rs  lib.rs  models.rs  multipart.rs  retry.rs  streaming.rs  url.rs  xml.rs
rust/ya-obs/src/operations/: delete_object.rs  get_object.rs  head_object.rs  list_buckets.rs  list_objects.rs  mod.rs  presign.rs  put_object.rs
rust/ya-obs/src/signer/: mod.rs  v2.rs  v4.rs
rust/ya-obs/tests/: conformance_auth_v2.rs  conformance_auth_v4.rs  conformance_errors.rs  conformance_smoke.rs  conformance_xml.rs  integration_get_object.rs  integration_head_delete.rs  integration_list_objects.rs  integration_multipart.rs  integration_put_object.rs  unit_config.rs  unit_presign.rs  unit_retry.rs
rust/ya-obs/tests/support/: mod.rs
test-vectors/auth/: v2_header_basic.json  v2_header_content_md5.json  v2_presign_basic.json  v4_header_basic.json  v4_header_nonascii_key.json  v4_presign_basic.json
test-vectors/errors/: access_denied.json  no_such_bucket.json  no_such_key.json
test-vectors/xml/: complete_multipart_request.json  error_response.json  initiate_multipart_response.json  list_objects_response.json
