[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ya-obs"
version = "0.1.2"
description = "A clean Python SDK for Huawei Cloud OBS"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "anyio[trio]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ya_obs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
