[package]
name = "ya-obs-cli"
version = "0.1.1"
description = "Command-line interface for Huawei Cloud OBS, built on ya-obs"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "ya-obs"
path = "src/main.rs"

[dependencies]
ya-obs = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
indicatif = "0.17"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
toml = "0.8"
dirs = "5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
