[package]
name = "ya-obs"
version = "0.1.1"
description = "A clean Rust SDK for Huawei Cloud OBS"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
quick-xml = { workspace = true }
thiserror = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
url = { workspace = true }
percent-encoding = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
fastrand = "2"

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
wiremock = "0.6"
